--- a/WpdOstatni/WpdOstatni.csproj
+++ b/WpdOstatni/WpdOstatni.csproj
@@ -55,6 +55,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Model\DataLayerr.cs" />
+    <Compile Include="Model\User.cs" />
+    <Compile Include="MVVMLight\RelayCommand.cs" />
+    <Compile Include="MVVMLight\ViewModelBase.cs" />
+    <Compile Include="ViewModel\MainViewModel.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
